--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,6 +9,8 @@
 
 <html>
   <head>
+    <title> HOME </title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
 
   <body>
