--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -9,6 +9,8 @@
 
 <html>
   <head>
+    <title> REGISTRATION PAGE </title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
 
   <body>
