--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -19,7 +19,7 @@
       <nav>
         <ul>
           <a href="{{ url_for('home') }}">Home</a>
-          
+          <a href="{{ url_for('logout') }}">Logout</a>
         </ul>
       </nav>
     </header>
