--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,10 +14,20 @@
   </head>
 
   <body>
-    <header>
-
-    </header>
-
+    <h1>Login</h1>>
+    <form method="POST">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+      <br>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+      <br>
+      <button type="submit">Login</button>
+    </form>
+    <p><a href="{{ url_for('register') }}">Register here</a></p>
+    {% if error_message %}
+        <p style="color: red;">{{ error_message }}</p>
+    {% endif %}
   </body>
 
   <footer>
