--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,10 +14,19 @@
   </head>
 
   <body>
-    <header>
-
-    </header>
-
+    <h1>Register</h1>
+    <form method="POST">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+      <br>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+      <br>
+      <button type="submit">Register</button>
+    </form>
+    {% if error_message %}
+      <p style="color: red;">{{ error_message }}</p>
+    {% endif %}
   </body>
 
   <footer>
