--- a/app/templates/api_results.html
+++ b/app/templates/api_results.html
@@ -15,8 +15,18 @@
 
   <body>
     <header>
-
+    <nav>
+      <ul>
+        <a href="{{ url_for('home') }}">Home</a>
+        <a href="{{ url_for('logout') }}">Logout</a>
+      </ul>
+    </nav>
     </header>
+    <main>
+      <section>
+        <h2>API Results</h2>
+      </section>
+    </main>
 
   </body>
 
