--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -23,6 +23,7 @@
     </nav>
     </header>
 <!-- below will be the somewhat starter code for the history of images until db is finished -->
+<!-- add an html function that takes a link and turns it into an image -->
     <main>
       <h1>Profile information</h1>
       <section class="past-image-list">
