--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -25,18 +25,21 @@
 <!-- below will be the somewhat starter code for the history of images until db is finished -->
 <!-- add an html function that takes a link and turns it into an image -->
     <main>
-      <h1>Profile information</h1>
+      <h1>{{ username }}'s Profile</h1>
       <section class="past-image-list">
-        {% for image in images}
-        <div class="detection-summary">
-          <h2>{{ image[0] }}</h2>
-          <p><strong>Image:</strong> {{ image[2] }} | <strong>Date:</strong> {{ image[3] }}</p>
-          <p>{{ image[1] }}<p>
-          <a href="{{ url for('imageView', title=image[0]) }}">View more</a>
-        </div>
+        {% if requests %}
+          <h2>Past Requests</h2>
+          {% for request in requests %}
+          <div class="detection-summary">
+            <p><strong>Request:</strong> {{ request['request'] }}</p>
+            <p><strong>Response:</strong> {{ request['response'] }}</p>
+            <p><strong>Timestamp:</strong> {{ request['timestamp'] }}</p>
+          </div>
+          {% endfor %}
         {% else %}
-        <p>No past history to display.</p>
-        {% endfor %}
+          <p>No past requests found.</p>
+        {% endif %}
+      </section>
     </main>
   </body>
 
