--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,6 +14,18 @@
   </head>
 
   <body>
+      <header>
+          <!-- Allows flashing messages in the html -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            <div class="flash-messages">
+              {% for category, message in messages %}
+                <div class="flash-message {{ category }}">{{ message }}</div>
+              {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
+      </header>
     <h1>Register</h1>
     <form method="POST">
       <label for="username">Username:</label>
