added logout/login container to api_results.html and profile.html

--- a/app/templates/api_results.html
+++ b/app/templates/api_results.html
@@ -25,13 +25,32 @@
             </div>
           {% endif %}
         {% endwith %}
+        <!-- Displays the welcome container if user is logged in -->
+        {% if session['username'] %}
+            <div class="welcome-container">
+                Welcome, {{ session['username'] }}
+                <a href="{{ url_for('logout') }}" class="signout-btn">Sign Out</a>
+            </div>
+        {% else %}
+            <!-- The existing login container if user is not logged in -->
+            <div class="login-container">
+                <form class="login-form" action="/login" method="POST">
+                    <input type="text" name="username" placeholder="Username" required>
+                    <input type="password" name="password" placeholder="Password" required>
+                    <div class="button-container">
+                        <button type="submit" class="login-btn">Login</button>
+                        <a href="{{ url_for('register') }}" class="signup-btn-link"><button type="button" class="signup-btn">Sign Up</button></a>
+                    </div>
+                </form>
+            </div>
+        {% endif %}
+    </header>
     <nav>
       <ul>
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('logout') }}">Logout</a>
       </ul>
     </nav>
-    </header>
     <main>
       <h2>Submit an Image or Search for Results</h2>
       <form method="POST" action="{{ url_for('process_api') }}" enctype="multipart/form-data">
@@ -59,7 +78,7 @@
       {% endif %}
     </main>
 
-    
+
   <footer>
     sIlLySaUsAgEsQuAD 2024
   </footer>
