--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -25,12 +25,25 @@
             </div>
           {% endif %}
         {% endwith %}
-    <nav>
-      <ul>
-        <a href="{{ url_for('home') }}">Home</a>
-        <a href="{{ url_for('logout') }}">Logout</a>
-      </ul>
-    </nav>
+        <!-- Displays the welcome container if user is logged in -->
+        {% if session['username'] %}
+            <div class="welcome-container">
+                Welcome, {{ session['username'] }}
+                <a href="{{ url_for('logout') }}" class="signout-btn">Sign Out</a>
+            </div>
+        {% else %}
+            <!-- The existing login container if user is not logged in -->
+            <div class="login-container">
+                <form class="login-form" action="/login" method="POST">
+                    <input type="text" name="username" placeholder="Username" required>
+                    <input type="password" name="password" placeholder="Password" required>
+                    <div class="button-container">
+                        <button type="submit" class="login-btn">Login</button>
+                        <a href="{{ url_for('register') }}" class="signup-btn-link"><button type="button" class="signup-btn">Sign Up</button></a>
+                    </div>
+                </form>
+            </div>
+        {% endif %}
     </header>
 <!-- below will be the somewhat starter code for the history of images until db is finished -->
 <!-- add an html function that takes a link and turns it into an image -->
