--- a/app/static/style.css
+++ b/app/static/style.css
@@ -131,3 +131,86 @@ background-color: #45a049;
 .signout-btn:hover {
   background-color: #bd2130;
 }
+
+/* Modal styles */
+.modal {
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    z-index: 1000;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    max-width: 800px;
+    overflow: hidden;
+}
+
+.overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.image-container {
+    display: flex;
+    gap: 20px;
+}
+
+.large-image img {
+    max-width: 100%;
+    max-height: 300px;
+    object-fit: contain;
+}
+
+.thumbnail-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow-y: auto;
+    max-height: 300px;
+}
+
+.thumbnail img {
+    cursor: pointer;
+    width: 100px;
+    height: auto;
+    transition: transform 0.2s ease;
+}
+
+.thumbnail img:hover {
+    transform: scale(1.1);
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.cancel-button {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.cancel-button:hover {
+    background-color: #c82333;
+    color: white;
+    text-decoration: none;
+}
+
+
