--- a/app/static/style.css
+++ b/app/static/style.css
@@ -132,6 +132,21 @@ background-color: #45a049;
   background-color: #bd2130;
 }
 
+/* Initially hide all input sections */
+.input-section {
+display: none;
+}
+
+/* Display the input section corresponding to the selected radio button */
+input[type="radio"]:checked + label + .input-section {
+display: block;
+}
+
+/* Add some spacing between radio groups */
+.radio-group {
+margin-bottom: 20px;
+}
+
 /* Modal styles */
 .modal {
     display: block;
