--- a/app/templates/api_requests.html
+++ b/app/templates/api_requests.html
@@ -3,22 +3,6 @@
   <head>
     <title>API RESULTS</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <style>
-      /* Initially hide all input sections */
-      .input-section {
-        display: none;
-      }
-
-      /* Display the input section corresponding to the selected radio button */
-      input[type="radio"]:checked + label + .input-section {
-        display: block;
-      }
-
-      /* Add some spacing between radio groups */
-      .radio-group {
-        margin-bottom: 20px;
-      }
-    </style>
   </head>
   <body>
     <header>
@@ -33,6 +17,7 @@
           {% endif %}
         {% endwith %}
       {% if session['username'] %}
+        
       <!-- Show a welcome message and sign-out option if the user is logged in -->
       <div class="welcome-container">
         Welcome, {{ session['username'] }}
@@ -54,6 +39,7 @@
       </div>
       {% endif %}
     </header>
+      
     <main>
       <h2>Submit an Image or Search for Results</h2>
 
@@ -104,6 +90,7 @@
         <button type="submit">Analyze</button>
       </form>
         
+      <!-- Pop up to display the top 5 result iimages for user to choose from if they enter a description -->
       {% if img_urls %}
         <div class="overlay active"></div>
         <div class="modal active">
