--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -39,6 +39,7 @@
     {% if error_message %}
       <p style="color: red;">{{ error_message }}</p>
     {% endif %}
+    <a href="{{ url_for('home') }}">Home</a>
   </body>
 
   <footer>
