fixed scaling and added profile results

--- a/app/templates/api_results.html
+++ b/app/templates/api_results.html
@@ -53,7 +53,7 @@
 
       <section class="image-section">
         <h2>Selected Image</h2>
-        <img src="{{ url }}" alt="Result Image" class="result-image">
+        <img src="{{ url }}" alt="Result Image" class="result-image" width="320" height="240">
       </section>
 
       <section class="description-section">
