--- a/app/templates/api_results.html
+++ b/app/templates/api_results.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>API RESULTS</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>API Results</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  </head>
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  -->
+    </head>
+
   <body>
     <header>
       <!-- Allows flashing messages in the html -->
@@ -16,40 +22,64 @@
             </div>
           {% endif %}
         {% endwith %}
-      {% if session['username'] %}
 
-      <!-- Show a welcome message and sign-out option if the user is logged in -->
-      <div class="welcome-container">
-        Welcome, {{ session['username'] }}
-        <a href="{{ url_for('logout') }}" class="signout-btn">Sign Out</a>
-      </div>
-      {% else %}
-      <!-- Display the login form if the user is not logged in -->
-      <div class="login-container">
-        <form class="login-form" action="/login" method="POST">
-          <input type="text" name="username" placeholder="Username" required>
-          <input type="password" name="password" placeholder="Password" required>
-          <div class="button-container">
-            <button type="submit" class="login-btn">Login</button>
-            <a href="{{ url_for('register') }}" class="signup-btn-link">
-              <button type="button" class="signup-btn">Sign Up</button>
-            </a>
+        <!-- Navigation bar -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <div class="container-fluid">
+              <p class="h2 text-light p-3 mr">Sausage APIs</p>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsible_navbar">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div id="collapsibleavbar" class="collapse navbar-collapse">
+                  <ul class="navbar-nav">
+                      <li class="nav-item">
+                          <a class="nav-link m-3" href="{{ url_for('home') }}">Home</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link m-3" href="{{ url_for('profile') }}">Profile</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link m-3" href="{{ url_for('api_requests') }}">API Requests</a>
+                      </li>
+                  </ul>
+
+                  <h1 style="color: white; margin-left: 20%; border-bottom:rgb(143, 167, 192) 3px solid; padding-left: 1%; padding-right: 1%; padding-bottom: 0.5%">API Results</h1>
+
+                  {% if not session['username'] %}
+                  <div class="ms-auto">
+                      <a href="{{ url_for('register') }}"><button type="button" class="btn btn-primary m-3 float-end" data-bs-toggle="collapse" data-bs-target="#signup">Sign Up</button></a>
+                      <button type="button" class="btn btn-primary m-3 float-end" data-bs-toggle="collapse" data-bs-target="#login">Login</button>
+                  </div>
+                  {% endif %}
           </div>
-        </form>
-      </div>
-      {% endif %}
-    </header>
-    <main>
-      <nav>
-        <a href="{{ url_for('home') }}">Home</a>
-        <a href="{{ url_for('profile') }}">Profile</a>
-        <a href="{{ url_for('api_requests') }}">Api Requests</a>
       </nav>
+
+      <!-- Displays the welcome container if user is logged in -->
+      {% if session['username'] %}
+          <div class="welcome-container rounded-3" style="margin-right: 0.9%; margin-top: 0.9%;">
+              Welcome, {{ session['username'] }}
+              <form action="/logout" method="POST" style="display: inline;">
+                  <button type="submit" class="signout-btn">Sign Out</button>
+                <!--<a href="{{ url_for('logout') }}" class="signout-btn">Sign Out</a>-->
+              </form>
+          </div>
+      {% else %}
+          <!-- The existing login container if user is not logged in -->
+          <div id="login" class="collapse bg-dark mt-2 m-lg-3 rounded-3" style="width: 300px; float: right;">
+              <form class="p-4" action="/login" method="POST">
+                  <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required>
+                  <input class="form-control mr-sm-2 mt-2" type="password" name="password" placeholder="Password" required>
+                  <button class="btn btn-success mt-2" type="submit">Submit</button>
+              </form>
+          </div>
+      {% endif %}
+  </header>
+
+    <main>
+
     <!-- one link to display image -->
     <!-- one description for the image (just a sentence describing the image)-->
     <!-- five videos to choose from -->
-
-      <h1>API Results</h1>
 
       <section class="image-section">
         <h2>Selected Image</h2>
