--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,8 +9,12 @@
 
 <html>
   <head>
-    <title> PROFILE </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Profile </title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -25,22 +29,51 @@
             </div>
           {% endif %}
         {% endwith %}
+
+        <!-- Navigation bar -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <div class="container-fluid">
+                <p class="h2 text-light p-3 mr">Sausage APIs</p>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsible_navbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="collapsibleavbar" class="collapse navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link m-3" href="{{ url_for('home') }}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="current-link" class="nav-link m-3" href="{{ url_for('profile') }}">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link m-3" href="{{ url_for('api_requests') }}">API Requests</a>
+                        </li>
+                    </ul>
+                    {% if not session['username'] %}
+                    <div class="ms-auto">
+                        <a href="{{ url_for('register') }}"><button type="button" class="btn btn-primary m-3 float-end" data-bs-toggle="collapse" data-bs-target="#signup">Sign Up</button></a>
+                        <button type="button" class="btn btn-primary m-3 float-end" data-bs-toggle="collapse" data-bs-target="#login">Login</button>
+                    </div>
+                    {% endif %}
+            </div>
+        </nav>
+
         <!-- Displays the welcome container if user is logged in -->
         {% if session['username'] %}
-            <div class="welcome-container">
+            <div class="welcome-container rounded-3" style="margin-right: 0.9%; margin-top: 0.9%;">
                 Welcome, {{ session['username'] }}
-                <a href="{{ url_for('logout') }}" class="signout-btn">Sign Out</a>
+                <form action="/logout" method="POST" style="display: inline;">
+                    <button type="submit" class="signout-btn">Sign Out</button>
+                  <!--<a href="{{ url_for('logout') }}" class="signout-btn">Sign Out</a>-->
+                </form>
             </div>
         {% else %}
             <!-- The existing login container if user is not logged in -->
-            <div class="login-container">
-                <form class="login-form" action="/login" method="POST">
-                    <input type="text" name="username" placeholder="Username" required>
-                    <input type="password" name="password" placeholder="Password" required>
-                    <div class="button-container">
-                        <button type="submit" class="login-btn">Login</button>
-                        <a href="{{ url_for('register') }}" class="signup-btn-link"><button type="button" class="signup-btn">Sign Up</button></a>
-                    </div>
+            <div id="login" class="collapse bg-dark mt-2 m-lg-3 rounded-3" style="width: 300px; float: right;">
+                <form class="p-4" action="/login" method="POST">
+                    <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required>
+                    <input class="form-control mr-sm-2 mt-2" type="password" name="password" placeholder="Password" required>
+                    <button class="btn btn-success mt-2" type="submit">Submit</button>
                 </form>
             </div>
         {% endif %}
@@ -48,11 +81,6 @@
 <!-- below will be the somewhat starter code for the history of images until db is finished -->
 <!-- add an html function that takes a link and turns it into an image -->
     <main>
-      <nav>
-        <a href="{{ url_for('home') }}">Home</a>
-        <a href="{{ url_for('profile') }}">Profile</a>
-        <a href="{{ url_for('api_requests') }}">Api Requests</a>
-      </nav>
       <h1>{{ username }}'s Profile</h1>
       <section class="past-image-list">
         {% if requests %}
