Added styling for home page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -105,7 +105,9 @@
   </body>
 
   <footer>
-    <p>sIlLySaUsAgEsQuAD 2024</p>
+    <div class="my-auto fixed-bottom bg-dark">
+        <p class="text-secondary p-2">sIlLySaUsAgEsQuAD 2024</p>
+    </div>
   </footer>
 
 
