--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,4 +1,68 @@
+
+*{
+    margin : 0;
+    padding: 0;
+    box-sizing : border-box;
+}
+
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: f4f4f4;
+    color: #333;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+header {
+    width: 100%;
+    background-color: #007BFF;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+.overview {
+  font-family: Arial, sans-serif;
+    background-color: f4f4f4;
+    color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.overview-list {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 15px 0;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  align-items: center;
+}
+
+.overview-image {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 15px 0;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  align-items: center;
+  max-width: 600;
+}
+
 /* Style flash messages */
+
 .flash-messages {
   position: fixed;
   top: 20px; /* Distance from the top of the window */
@@ -80,14 +144,14 @@ gap: 10px;
 
 /* General style for buttons */
 .login-form {
-    position: fixed; 
-    top: 0; 
-    right: 0; 
+    position: fixed;
+    top: 0;
+    right: 0;
     padding: 10px;
     display: flex;
-    flex-direction: column; 
-    align-items: flex-start; 
-    width: 200px; 
+    flex-direction: column;
+    align-items: flex-start;
+    width: 200px;
 }
 
 .login-form button {
@@ -130,7 +194,7 @@ background-color: #45a049;
 }
 
 .signout-btn {
-  background-color: #dc3545; 
+  background-color: #dc3545;
   color: white;
   padding: 5px 10px;
   text-decoration: none;
@@ -237,5 +301,3 @@ margin-bottom: 20px;
     color: white;
     text-decoration: none;
 }
-
-
