added classes to home to style them

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -91,14 +91,16 @@
                 -->
 
     <main>
-      <section>
+      <section class="overview">
         <h2>Overview</h2>
         <p>Welcome to sIlLySaUsAgEsQuAD's app</p>
-        <ul>
+        <p>Our site allows us to:</p>
+        <ul class="overview-list">
           <li>Upload or generate images using the Unsplash API.</li>
           <li>Analyze images to identify objects and their definitions.</li>
           <li>Manage your profile and history.</li>
         </ul>
+        <img class ="overview-image" src="https://github.com/jsonano/silly_sausage_squad-project_1/blob/main/flag.png?raw=true" width="400" height="auto">
       </section>
     </main>
 
