--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -11,6 +11,8 @@
   <head>
     <title> REGISTRATION PAGE </title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -26,20 +28,25 @@
           {% endif %}
         {% endwith %}
       </header>
-    <h1>Register</h1>
+    <div class="bg-dark text-light mx-auto p-2">
+      <center><h1>Register</h1></center>
+    </div>
+    <br><br><br>
+    <div class="mx-auto p-3 shadow-lg bg-dark text-light rounded-3" style="width: 300px;">
     <form method="POST">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
       <br>
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
-      <br>
+      <br><br>
       <button type="submit">Register</button>
     </form>
     {% if error_message %}
       <p style="color: red;">{{ error_message }}</p>
     {% endif %}
     <a href="{{ url_for('home') }}">Home</a>
+  </div>
   </body>
 
   <footer>
