--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,18 +6,18 @@
   # Due 2024-12-17
   # time spent:
  -->
-
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Home </title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
         <!-- Allows flashing messages in the html -->
         {% with messages = get_flashed_messages(with_categories=true) %}
@@ -29,9 +29,12 @@
                 </div>
             {% endif %}
         {% endwith %}
+    </header>
+
+    <div class="home-container" style="height: 100vh;">
 
         <!-- Navigation bar -->
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark shadow-lg">
             <div class="container-fluid">
                 <p class="h2 text-light p-3 mr">Sausage APIs</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsible_navbar">
@@ -49,12 +52,13 @@
                             <a class="nav-link m-3" href="{{ url_for('api_requests') }}">API Requests</a>
                         </li>
                     </ul>
-                    {% if not session['username'] %}
+                {% if not session['username'] %}
                     <div class="ms-auto">
                         <a href="{{ url_for('register') }}"><button type="button" class="btn btn-primary m-3 float-end" data-bs-toggle="collapse" data-bs-target="#signup">Sign Up</button></a>
                         <button type="button" class="btn btn-primary m-3 float-end" data-bs-toggle="collapse" data-bs-target="#login">Login</button>
                     </div>
-                    {% endif %}
+                {% endif %}
+                </div>
             </div>
         </nav>
 
@@ -64,7 +68,7 @@
                 Welcome, {{ session['username'] }}
                 <form action="/logout" method="POST" style="display: inline;">
                     <button type="submit" class="signout-btn">Sign Out</button>
-                  <!--<a href="{{ url_for('logout') }}" class="signout-btn">Sign Out</a>-->
+                    <!--<a href="{{ url_for('logout') }}" class="signout-btn">Sign Out</a>-->
                 </form>
             </div>
         {% else %}
@@ -77,42 +81,38 @@
                 </form>
             </div>
         {% endif %}
-    </header>
+            <!--
+            <form class="login-form" action="/login" method="POST">
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <div class="button-container">
+                    <button type="submit" class="login-btn">Login</button>
+                    <a href="{{ url_for('register') }}" class="signup-btn-link"><button type="button" class="signup-btn">Sign Up</button></a>
+                </div>
+            </form>
+            -->
+        <main>
+            <div class="container p-5">
+                <section class="overview">
+                <h2>Overview</h2>
+                <p>Welcome to sIlLySaUsAgEsQuAD's app</p>
+                <p>Our site allows us to:</p>
+                <ul class="overview-list">
+                    <li>Upload or generate images using the Unsplash API.</li>
+                    <li>Analyze images to identify objects and their definitions.</li>
+                    <li>Manage your profile and history.</li>
+                </ul>
+                <img class ="overview-image" src="https://github.com/jsonano/silly_sausage_squad-project_1/blob/main/flag.png?raw=true" width="400" height="auto">
+                </section>
+            </div>
+        </main>
+    </div>
+</body>
 
-                    <!--
-                <form class="login-form" action="/login" method="POST">
-                    <input type="text" name="username" placeholder="Username" required>
-                    <input type="password" name="password" placeholder="Password" required>
-                    <div class="button-container">
-                        <button type="submit" class="login-btn">Login</button>
-                        <a href="{{ url_for('register') }}" class="signup-btn-link"><button type="button" class="signup-btn">Sign Up</button></a>
-                    </div>
-                </form>
-                -->
-
-    <main>
-      <section class="overview">
-        <h2>Overview</h2>
-        <p>Welcome to sIlLySaUsAgEsQuAD's app</p>
-        <p>Our site allows us to:</p>
-        <ul class="overview-list">
-          <li>Upload or generate images using the Unsplash API.</li>
-          <li>Analyze images to identify objects and their definitions.</li>
-          <li>Manage your profile and history.</li>
-        </ul>
-        <img class ="overview-image" src="https://github.com/jsonano/silly_sausage_squad-project_1/blob/main/flag.png?raw=true" width="400" height="auto">
-      </section>
-    </main>
-
-  </body>
-
-  <footer>
+<footer>
     <div class="my-auto fixed-bottom bg-dark">
         <p class="text-secondary p-2">sIlLySaUsAgEsQuAD 2024</p>
     </div>
-  </footer>
-
-
-
+</footer>
 
 </html>
