--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -96,23 +96,21 @@
                 <section class="overview">
                 <h2>Overview</h2>
                 <p>Welcome to sIlLySaUsAgEsQuAD's app</p>
-                <p>Our site allows us to:</p>
-                <ul class="overview-list">
-                    <li>Upload or generate images using the Unsplash API.</li>
-                    <li>Analyze images to identify objects and their definitions.</li>
-                    <li>Manage your profile and history.</li>
-                </ul>
+                <p>Our site allows you to:</p>
+                <div class="overview-list">
+                    <p>Upload or generate images using the Unsplash API.</p>
+                    <p>Analyze images to identify objects and their definitions.</p>
+                    <p>Manage your profile and history.</p>
+                </div>
                 <img class ="overview-image" src="https://github.com/jsonano/silly_sausage_squad-project_1/blob/main/flag.png?raw=true" width="400" height="auto">
                 </section>
             </div>
         </main>
     </div>
+
+
+<footer class="bg-dark text-light text-center py-2 fixed-bottom">
+    <p class="m-0">sIlLySaUsAgEsQuAD 2024</p>
+  </footer>
 </body>
-
-<footer>
-    <div class="my-auto fixed-bottom bg-dark">
-        <p class="text-secondary p-2">sIlLySaUsAgEsQuAD 2024</p>
-    </div>
-</footer>
-
 </html>
