--- a/app/static/style.css
+++ b/app/static/style.css
@@ -173,16 +173,20 @@ background-color: #45a049;
 }
 
 .signout-btn {
-  background-color: #dc3545;
-  color: white;
-  padding: 5px 10px;
-  text-decoration: none;
-  margin-left: 10px;
-  border-radius: 4px;
+    flex: 1;
+    padding: 8px 16px;
+    border-radius: 20px;
+    color: white;
+    background-color: #bd2130; 
+    border: none;
+    cursor: pointer;
+    margin-bottom: 0;
+    margin-left: 17 px;
 }
 
 .signout-btn:hover {
-  background-color: #bd2130;
+    background-color: #bd2130; 
+    color: #fff;
 }
 
 /* Initially hide all input sections */
