Updated profile page

--- a/app/templates/api_requests.html
+++ b/app/templates/api_requests.html
@@ -164,8 +164,10 @@
         </div>
       {% endif %}
     </main>
-    <footer class="bg-dark text-light text-center py-2 fixed-bottom">
-      <p class="m-0">sIlLySaUsAgEsQuAD 2024</p>
-    </footer>
   </body>
+
+<footer class="bg-dark text-secondary text-center py-2 fixed-bottom">
+  <p class="m-0">🌭 sIlLySaUsAgEsQuAD 2024</p>
+</footer>
+
 </html>
