--- a/app/templates/api_results.html
+++ b/app/templates/api_results.html
@@ -106,18 +106,16 @@
           
       </section>
 
-      <section class="back-section">
+      <section class="back-section" style="margin-bottom: 2%">
         <a href="{{ url_for('api_requests') }}" class="back-btn">Back to API Requests</a>
       </section>
 
     </main>
 </body>
 
-    <footer>
-      <div class="my-auto fixed-bottom bg-dark">
-          <h6 class="text-secondary p-2" style="margin-bottom: -0.1%;">🌭 sIlLySaUsAgEsQuAD 2024</h6>
-      </div>
-  </footer>
+<footer class="bg-dark text-secondary text-center py-2 fixed-bottom">
+  <p class="m-0">🌭 sIlLySaUsAgEsQuAD 2024</p>
+</footer>
 
 
 </html>
