--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -107,17 +107,10 @@
             </div>
         </main>
     </div>
-
-
-<footer class="bg-dark text-light text-center py-2 fixed-bottom">
-    <p class="m-0">sIlLySaUsAgEsQuAD 2024</p>
-  </footer>
 </body>
 
-<footer>
-    <div class="my-auto fixed-bottom bg-dark">
-        <h6 class="text-secondary p-2" style="margin-bottom: -0.1%;">🌭 sIlLySaUsAgEsQuAD 2024</h6>
-    </div>
+<footer class="bg-dark text-secondary text-center py-2 fixed-bottom">
+    <p class="m-0">🌭 sIlLySaUsAgEsQuAD 2024</p>
 </footer>
 
 </html>
